--- a/ADIN.WPF/View/FrameGenCheckerView.xaml
+++ b/ADIN.WPF/View/FrameGenCheckerView.xaml
@@ -6,55 +6,66 @@
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              xmlns:local="clr-namespace:ADIN.WPF.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="600">
+             d:DesignHeight="800" d:DesignWidth="600">
     <UserControl.Resources>
-        <Style x:Key="LabelStyle" TargetType="{x:Type TextBlock}">
-            <Setter Property="Margin" Value="2 2 8 2"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-        </Style>
+        
     </UserControl.Resources>
     <Grid Margin="5">
 
         <StackPanel HorizontalAlignment='Stretch' Margin='10' >
 
-            <GroupBox Header='1. Enable Remote Loopback in Link Partner'>
-                <StackPanel>
-                    <TextBlock TextWrapping='Wrap' Text="Loopback can be conveniently enabled on a remote device to loopback frames for the frame checker to check." Margin="2 2 8 2"    />
-                    <telerik:RadButton Style="{StaticResource FramGenButtonStyle}" Content="Remote Loopback" Margin="5 5" ToolTip='Loops the data received from the remote PHY back to the remote PHY using all of the digital and analog circuitry.' Command="{Binding RemoteLoopbackCommand}" x:Name="RemoteLoopback"/>
+            <GroupBox Header='Enable Remote Loopback in Link Partner' Style="{StaticResource GroupBoxStyle}">
+                <StackPanel Margin="0">
+                    <TextBlock TextWrapping='Wrap' Text="Loopback can be conveniently enabled on a remote device to loopback frames for the frame checker to check." Style="{StaticResource TextBlockstyle}"   />
+                    <telerik:RadButton Style="{StaticResource FramGenButtonStyle}" Content="Remote Loopback" ToolTip='Loops the data received from the remote PHY back to the remote PHY using all of the digital and analog circuitry.' Command="{Binding RemoteLoopbackCommand}" x:Name="RemoteLoopback"/>
                 </StackPanel>
             </GroupBox>
 
-            <GroupBox Header="2. Frame Generator in Local PHY">
-                <StackPanel Margin="5,0">
-                    <CheckBox Margin="2 2 8 2" IsEnabled="{Binding FrameGenRunning}" ToolTip='Enable this to send a continuous stream of frames. Alternative is to send a burst of frames of a certain length.' x:Name='chkContinuous' IsChecked="{Binding EnableContinuousMode}">Continuous Mode until terminated.</CheckBox>
-                    <Grid>
+            <GroupBox x:Name="GroupHeader" Header="Frame Generator in Local PHY" Style="{StaticResource GroupBoxStyle}" Margin="0 10 0 0">
+                <StackPanel Margin="0">
+                    <CheckBox IsEnabled="{Binding FrameGenRunning}" ToolTip='Enable this to send a continuous stream of frames. Alternative is to send a burst of frames of a certain length.' x:Name='chkContinuous' IsChecked="{Binding EnableContinuousMode}" Style="{StaticResource CheckBoxStyle}">Continuous Mode until terminated.</CheckBox>
+                    <Grid Margin="0 10 0 5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
                         <TextBlock Grid.Column="0" Text="Number of Frames in Burst" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked}" Style="{StaticResource LabelStyle}"/>
                         <TextBox Grid.Column="1" Text="{Binding ElementName=SliderFrameNumber, Path=Value, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalAlignment="Right" HorizontalContentAlignment="Center"/>
+                        <telerik:RadSlider Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 5 0 0" IsEnabled="{Binding FrameGenRunning}"  x:Name="SliderFrameNumber" Value="{Binding FrameBurst}" Maximum="65535" TickFrequency="50" IsSnapToTickEnabled="True" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked}"/>
                     </Grid>
-                    <telerik:RadSlider IsEnabled="{Binding FrameGenRunning}"  x:Name="SliderFrameNumber" Value="{Binding FrameBurst}" Maximum="65535" TickFrequency="50" IsSnapToTickEnabled="True" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked}"/>
-
-                    <Grid Margin="0,5,0,0">
+                    
+                    <Grid Margin="0 5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
                         <TextBlock Grid.Column="0" Text="Frame Length" Style="{StaticResource LabelStyle}"/>
                         <TextBox Grid.Column="1" HorizontalAlignment="Right" Text="{Binding ElementName=SliderFrameLength, Path=Value, UpdateSourceTrigger=PropertyChanged}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalContentAlignment="Center"/>
+                        <telerik:RadSlider Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 5 0 0" IsEnabled="{Binding FrameGenRunning}" x:Name="SliderFrameLength" Value="{Binding FrameLength}" Maximum="65500" TickFrequency="50" IsSnapToTickEnabled="True"/>
                     </Grid>
-                    <telerik:RadSlider IsEnabled="{Binding FrameGenRunning}" x:Name="SliderFrameLength" Value="{Binding FrameLength}" Maximum="65500" TickFrequency="50" IsSnapToTickEnabled="True"/>
 
-                    <TextBlock Text="Frame Content" Style="{StaticResource LabelStyle}" />
-                    <ComboBox Name="FrameContent" IsEnabled="{Binding FrameGenRunning}" ItemsSource="{Binding FrameContents}" SelectedItem="{Binding SelectedFrameContent}">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Name}"/>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <Grid Margin="0 5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="Frame Content" Style="{StaticResource LabelStyle}" />
+                        <ComboBox Name="FrameContent" Grid.Row="1" Margin="0 5 0 0" IsEnabled="{Binding FrameGenRunning}" ItemsSource="{Binding FrameContents}" SelectedItem="{Binding SelectedFrameContent}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </Grid>
 
                     <!--<CheckBox x:Name="chkEnableMacAddress" Margin="2 10 8 2"  IsChecked="{Binding EnableMacAddress}">Change MAC Address</CheckBox>-->
                     <!--<TextBlock Text="Source MAC Address" Style="{StaticResource LabelStyle}"/>-->
@@ -64,8 +75,8 @@
                     <!--<local:MACAddress x:Name="txtDestMacAddress" Address="{Binding DestMacAddress}" IsEnabled="{Binding ElementName=chkEnableMacAddress, Path=IsChecked, UpdateSourceTrigger=PropertyChanged}"/>-->
 
                     <!--<CheckBox Name='chkEnableChecker' Content='Enable Checker' IsChecked='True' Margin="2 2 8 2"    Visibility='Collapsed'  />-->
-                    <telerik:RadButton Content="Clear Results" ToolTip='Reset all frame checker settings to defaults.'  Command="{Binding ResetFrameCheckerCommnad}" x:Name="ResetSettings" Style="{StaticResource FramGenButtonStyle}" Margin="5 5"/>
-                    <telerik:RadButton Content="{Binding FrameGeneratorButtonText}" ToolTip='Start generatting frames.'  Command="{Binding ExecuteFrameCheckerCommand}" x:Name="GenerateFrames" Style="{StaticResource FramGenButtonStyle}" Margin="5 5"/>
+                    <telerik:RadButton Content="Clear Results" ToolTip='Reset all frame checker settings to defaults.'  Command="{Binding ResetFrameCheckerCommnad}" x:Name="ResetSettings" Style="{StaticResource FramGenButtonStyle}"/>
+                    <telerik:RadButton Content="{Binding FrameGeneratorButtonText}" ToolTip='Start generatting frames.'  Command="{Binding ExecuteFrameCheckerCommand}" x:Name="GenerateFrames" Style="{StaticResource FramGenButtonStyle}"/>
                 </StackPanel>
             </GroupBox>
         </StackPanel>
