--- a/ADIN.WPF/Themes/ButtonStyle.xaml
+++ b/ADIN.WPF/Themes/ButtonStyle.xaml
@@ -52,13 +52,15 @@
     <!--Flat Style-->
     <Style x:Key="ButtonStyle" TargetType="{x:Type telerik:RadButton}">
         <Setter Property="Margin" Value="3"/>
-        <Setter Property="Height" Value="32"/>
+        <Setter Property="Height" Value="24"/>
         <Setter Property="Background" Value="{StaticResource button.secondary.background}" />
         <Setter Property="Foreground" Value="{StaticResource button.secondary.foreground}" />
         <Setter Property="BorderBrush" Value="{StaticResource button.secondary.borderbrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="CornerRadius" Value="4"/>
         <Setter Property="FontFamily" Value="Barlow"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type telerik:RadButton}">
@@ -110,7 +112,7 @@
     </Style>
     <Style x:Key="FramGenButtonStyle" TargetType="{x:Type telerik:RadButton}" BasedOn="{StaticResource ButtonStyle}">
         <Setter Property="Margin" Value="0 4"/>
-        <Setter Property="Height" Value="32"/>
+        <!--<Setter Property="Height" Value="32"/>-->
     </Style>
     <Style x:Key="AdiLogoStyle" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent"/>
@@ -137,13 +139,15 @@
     <Style x:Key="TelerikRadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}">
         <Setter Property="Margin" Value="3 0"/>
         <Setter Property="Width" Value="120"/>
-        <Setter Property="Height" Value="32"/>
+        <Setter Property="Height" Value="24"/>
         <Setter Property="Background" Value="{StaticResource button.secondary.background}" />
         <Setter Property="BorderBrush" Value="{StaticResource button.secondary.borderbrush}"/>
         <Setter Property="Foreground" Value="{StaticResource button.secondary.foreground}" />
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="CornerRadius" Value="4"/>
         <Setter Property="FontFamily" Value="Barlow"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type telerik:RadRadioButton}">
