--- a/ADIN.WPF/App.xaml
+++ b/ADIN.WPF/App.xaml
@@ -27,6 +27,7 @@
                 <ResourceDictionary Source="Themes/CustomControlStyle/GridSplitterStyle.xaml"/>
                 <ResourceDictionary Source="Themes/TabControlStyle.xaml"/>
                 <ResourceDictionary Source="Themes/CheckBoxStyle.xaml"/>
+                <ResourceDictionary Source="Themes/PropertyGridStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
