--- a/ADIN.WPF/Components/DeviceListing.xaml
+++ b/ADIN.WPF/Components/DeviceListing.xaml
@@ -28,11 +28,27 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="30" Height="30" Source="{Binding ImagePath}" Margin="0 0 5 0"/>
-                            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding SerialNumber}"/>
-                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Name}" FontSize="10"/>
+                            <TextBlock x:Name="SerialNumberTextBlock" Grid.Column="1" Grid.Row="0" Text="{Binding SerialNumber}"/>
+                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Name}" FontSize="10" FontWeight="Normal"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
+                <!--<ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="TextBlock.FontWeight">
+                            <Setter.Value></Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>-->
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="FontWeight" Value="Bold"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
             </ListView>
         </Border>
         
