ScrollBar Style Added

--- a/ADIN.WPF/App.xaml
+++ b/ADIN.WPF/App.xaml
@@ -28,6 +28,7 @@
                 <ResourceDictionary Source="Themes/TabControlStyle.xaml"/>
                 <ResourceDictionary Source="Themes/CheckBoxStyle.xaml"/>
                 <ResourceDictionary Source="Themes/PropertyGridStyle.xaml"/>
+                <ResourceDictionary Source="Themes/ScrollBarStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
