--- a/ADIN.WPF/Themes/ButtonStyle.xaml
+++ b/ADIN.WPF/Themes/ButtonStyle.xaml
@@ -137,7 +137,6 @@
 
 
     <Style x:Key="TelerikRadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}">
-        <Setter Property="Margin" Value="3 0"/>
         <Setter Property="Width" Value="120"/>
         <Setter Property="Height" Value="24"/>
         <Setter Property="Background" Value="{StaticResource button.secondary.background}" />
@@ -193,7 +192,9 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    <Style x:Key="RadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}" BasedOn="{StaticResource TelerikRadioButtonStyle}"/>
+    <Style x:Key="RadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}" BasedOn="{StaticResource TelerikRadioButtonStyle}">
+        <Setter Property="Margin" Value="5"/>
+    </Style>
     <Style x:Key="ClockPinRadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}" BasedOn="{StaticResource TelerikRadioButtonStyle}">
         <Setter Property="Width" Value="150"/>
         <Setter Property="Margin" Value="5 5"/>
