--- a/ADIN.WPF/Themes/TextBlockStyle.xaml
+++ b/ADIN.WPF/Themes/TextBlockStyle.xaml
@@ -16,6 +16,13 @@
         <Setter Property="Margin" Value="0 0 0 5"/>
     </Style>
 
+    <Style x:Key="TextBlockHeaderStyle" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="14px"/>
+        <Setter Property="FontFamily" Value="Barlow"/>
+        <Setter Property="Foreground" Value="{StaticResource hmc.color.content.inverse}"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
+
     <Style x:Key="TextBlockstyle" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="12px"/>
         <Setter Property="FontFamily" Value="Barlow"/>
@@ -63,5 +70,30 @@
             </Setter.Value>
         </Setter>
         <!--<Setter Property="GroupBox.FontWeight" Value="Bold"/>-->
+    </Style>
+
+    <Style TargetType="{x:Type TextBox}">
+        <Setter Property="FontFamily" Value="Barlow"/>
+        <Setter Property="Height" Value="24px"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="BorderBrush" Value="{StaticResource hmc.color.layout.divider.default}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border x:Name="border" BorderThickness="1" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="4">
+                        <ScrollViewer x:Name="PART_ContentHost"
+                                        Focusable="false"
+                                        HorizontalScrollBarVisibility="Hidden"
+                                        VerticalScrollBarVisibility="Hidden"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type ListBox}">
+        <Setter Property="FontFamily" Value="Barlow"/>
+        <Setter Property="FontSize" Value="12"/>
     </Style>
 </ResourceDictionary>
