--- a/ADIN.WPF/View/RegisterAccessView.xaml
+++ b/ADIN.WPF/View/RegisterAccessView.xaml
@@ -17,12 +17,12 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" CornerRadius="5,5,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}">
+            <Border Grid.Row="0" CornerRadius="4,4,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}">
                 <DockPanel>
-                    <TextBlock VerticalAlignment="Center" Foreground="WhiteSmoke" FontWeight="DemiBold" FontSize="14" Text="Register Read" Padding="5"/>
+                    <TextBlock Text="Register Read" Margin="5" Style="{StaticResource TextBlockHeaderStyle}"/>
                 </DockPanel>
             </Border>
-            <Border Grid.Row="1" CornerRadius="0" BorderBrush="Gray" BorderThickness="1 0 1 1" Background="Transparent" Padding="5">
+            <Border Grid.Row="1" CornerRadius="0 0 4 4" BorderBrush="{StaticResource hmc.color.layout.divider.default}" BorderThickness="1 0 1 1" Background="Transparent" Padding="5">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -30,18 +30,19 @@
                         <ColumnDefinition Width="4*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="20"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Address:"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Value:" Margin="10 0 0 0"/>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Address:" Style="{StaticResource TextBlockstyle}"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Value:" Style="{StaticResource TextBlockstyle}"/>
                     <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Margin="10 0 0 0">
-                        <TextBlock Text="0x " VerticalAlignment="Center"/>
+                        <TextBlock Text="0x " VerticalAlignment="Center" Style="{StaticResource TextBlockstyle}"/>
                         <TextBox Width="80" Text="{Binding ReadInput, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center"/>
+                        <!--<telerik:RadWatermarkTextBox WatermarkContent="Register Address" Text="{Binding ReadInput, UpdateSourceTrigger=PropertyChanged}"/>-->
                     </StackPanel>
                     <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="20 0 0 0">
-                        <TextBlock Text="0x" VerticalAlignment="Center"/>
-                        <TextBlock Text="{Binding ReadOutput}"  VerticalAlignment="Center"/>
+                        <TextBlock Text="0x" VerticalAlignment="Center" Style="{StaticResource TextBlockstyle}"/>
+                        <TextBlock Text="{Binding ReadOutput}"  VerticalAlignment="Center" Style="{StaticResource TextBlockstyle}"/>
                     </StackPanel>
                     <telerik:RadButton Grid.Column="2" Grid.Row="1" Content="Read" Margin="10 0 0 0" 
                                    HorizontalAlignment="Left" Width="60" Style="{StaticResource TelerikButtonStyle}" 
@@ -54,12 +55,12 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" CornerRadius="5,5,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}" Margin="0 0 0 0 ">
+            <Border Grid.Row="0" CornerRadius="4,4,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}" Margin="0 0 0 0 ">
                 <DockPanel>
-                    <TextBlock VerticalAlignment="Center" Foreground="WhiteSmoke" FontWeight="DemiBold" FontSize="14" Text="Register Write" Padding="5"/>
+                    <TextBlock Text="Register Write" Margin="5" Style="{StaticResource TextBlockHeaderStyle}"/>
                 </DockPanel>
             </Border>
-            <Border Grid.Row="1" CornerRadius="0" BorderBrush="Gray" BorderThickness="1 0 1 1" Background="Transparent" Padding="5">
+            <Border Grid.Row="1" CornerRadius="0 0 4 4" BorderBrush="{StaticResource hmc.color.layout.divider.default}" BorderThickness="1 0 1 1" Background="Transparent" Padding="5">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -67,18 +68,18 @@
                         <ColumnDefinition Width="4*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="20"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Address:"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Value:" Margin="10 0 0 0"/>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Address:" Style="{StaticResource TextBlockstyle}"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Value:" Style="{StaticResource TextBlockstyle}"/>
                     <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Margin="10 0 0 0">
-                        <TextBlock Text="0x " VerticalAlignment="Center"/>
-                        <TextBox Text="{Binding WriteInput}" Width="80" VerticalAlignment="Center"/>
+                        <TextBlock Text="0x " VerticalAlignment="Center" Style="{StaticResource TextBlockstyle}"/>
+                        <TextBox Text="{Binding WriteInput}" Width="80"/>
                     </StackPanel>
                     <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="20 0 0 0">
-                        <TextBlock Text="0x " VerticalAlignment="Center"/>
-                        <TextBox Text="{Binding WriteValue}" Width="80" VerticalAlignment="Center"/>
+                        <TextBlock Text="0x " VerticalAlignment="Center" Style="{StaticResource TextBlockstyle}"/>
+                            <TextBox Text="{Binding WriteValue}" Width="80"/>
                     </StackPanel>
                     <telerik:RadButton Grid.Column="2" Grid.Row="1" Content="Write" Margin="10 0 0 0" 
                                    HorizontalAlignment="Left" Width="60" Style="{StaticResource TelerikButtonStyle}" 
