--- a/ADIN.WPF/View/TestModeView.xaml
+++ b/ADIN.WPF/View/TestModeView.xaml
@@ -32,7 +32,7 @@
                 </ComboBox>
                 <StackPanel Visibility="{Binding SelectedTestMode.IsRequiringFrameLength, Converter={StaticResource booleanVisibilityConverter}}">
                     <!--<StackPanel>-->
-                    <TextBlock Text="Frame Length" Style="{StaticResource LabelStyle}" Margin="0 0 0 10"/>
+                    <TextBlock Text="Frame Length" Style="{StaticResource TextBlockstyle}" Margin="0 0 0 10"/>
                     <telerik:RadSlider x:Name='SliderFrameLength' Value="{Binding TestModeFrameLengthValue}" Minimum="64" SmallChange="1" Maximum="1530" TickFrequency='1' IsSnapToTickEnabled='True' />
                     <TextBlock Text='{Binding ElementName=SliderFrameLength, Path=Value}' Style="{StaticResource TextBlockstyle}" Margin="0 5 0 0"/>
                 </StackPanel>
