--- a/ADIN.WPF/Themes/TextBlockStyle.xaml
+++ b/ADIN.WPF/Themes/TextBlockStyle.xaml
@@ -2,39 +2,64 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
                     xmlns:local="clr-namespace:ADIN.WPF.Themes">
-    <Style x:Key="TitleHeaderStyle" TargetType="{x:Type TextBlock}">
-        <Setter Property="FontSize" Value="20"/>
-        <Setter Property="Foreground" Value="{StaticResource Foreground.Color}"/>
-        <Setter Property="FontWeight" Value="DemiBold"/>
-        <Setter Property="Margin" Value="0 0 0 10"/>
+    <Style x:Key="BorderSyle" TargetType="{x:Type Border}">
+        <Setter Property="BorderBrush" Value="{StaticResource hmc.color.layout.divider.default}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="CornerRadius" Value="4"/>
+        <Setter Property="Padding" Value="5"/>
     </Style>
-
-    <Style x:Key="TitleSubHeaderStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TitleHeaderStyle}">
-        <Setter Property="FontSize" Value="15"/>
-        <Setter Property="Foreground" Value="{StaticResource Foreground.Color}"/>
-        <Setter Property="FontWeight" Value="Thin"/>
-        <Setter Property="Margin" Value="0 0 0 5"/>
-    </Style>
-
-    <Style x:Key="TextBlockHeaderStyle" TargetType="{x:Type TextBlock}">
+    
+    <Style x:Key="TextBlockHeaderBaseStyle" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="14px"/>
         <Setter Property="FontFamily" Value="Barlow"/>
         <Setter Property="Foreground" Value="{StaticResource hmc.color.content.inverse}"/>
+    </Style>
+
+    <Style x:Key="TextBlockHeader1Style" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockHeaderBaseStyle}">
+        <Setter Property="FontWeight" Value="ExtraBold"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{StaticResource hmc.color.content.default}"/>
+    </Style>
+
+    <Style x:Key="TextBlockHeader2Style" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockHeaderBaseStyle}">
+        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{StaticResource hmc.color.content.default}"/>
+    </Style>
+
+    <Style x:Key="TextBlockHeaderStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockHeaderBaseStyle}">
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
     <Style x:Key="TextBlockstyle" TargetType="{x:Type TextBlock}">
-        <Setter Property="FontSize" Value="12px"/>
+        <Setter Property="FontSize" Value="14px"/>
         <Setter Property="FontFamily" Value="Barlow"/>
     </Style>
 
-    <Style x:Key="ValueStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockstyle}">
-        <Setter Property="FontSize" Value="16"/>
+    <Style x:Key="DeviceStatusTextBlockstyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockstyle}">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{StaticResource hmc.color.content.default}"/>
     </Style>
 
-    <Style x:Key="LabelStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockstyle}">
-        <!--<Setter Property="Margin" Value="2 2 8 2"/>-->
-        <!--<Setter Property="FontWeight" Value="SemiBold"/>-->
+    
+
+    <telerik:Windows8Colors x:Key="Windows8Colors" />
+    <SolidColorBrush x:Key="AccentBrush" Color="{Binding Path=Palette.AccentColor, Source={StaticResource Windows8Colors}}"/>
+    <Style x:Key="DeviceStatusValueStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockstyle}">
+        <Setter Property="FontSize" Value="20"/>
+        <!--<Setter Property="Foreground" Value="{StaticResource AccentBrush}"/>-->
+        <Setter Property="Foreground" Value="{StaticResource deviceStatus.foreground}"/>
+        <!--<Setter Property="FontFamily" Value="Segoe UI Light"/>-->
+        <Setter Property="FontWeight" Value="Medium"/>
+    </Style>
+
+    <Style x:Key="LinkStatusValueStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockstyle}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontFamily" Value="Segoe UI Light"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
     </Style>
 
     <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
