--- a/ADIN.WPF/Themes/WhiteTheme.xaml
+++ b/ADIN.WPF/Themes/WhiteTheme.xaml
@@ -367,7 +367,8 @@
     <SolidColorBrush x:Key="buttonReset.isPressed.foreground" Color="{Binding Source={StaticResource hmc.color.notification.danger.strong.text}, Path=Color}"/>
     <SolidColorBrush x:Key="buttonReset.isPressed.background" Color="{Binding Source={StaticResource hmc.color.notification.danger.strong.background}, Path=Color}"/>
     <SolidColorBrush x:Key="buttonReset.isPressed.borderbrush" Color="{Binding Source={StaticResource hmc.color.notification.danger.strong.background}, Path=Color}"/>
-    
-    
+
+
+    <SolidColorBrush x:Key="deviceStatus.foreground" Color="{StaticResource hmc.color.blue.600}"/>
     
 </ResourceDictionary>
